test/test_suite7/errors/mixed_decl.c3
import std::io;

fn void main()
{
	int a, $b;
	int $c, $d;
	a++;
	$b++;
	$d++;
}